# DevTeam_AI

./: .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  Dockerfile.sandbox  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  architect.py  coder.py  parsing.py  planner.py  reviewer.py  tester.py
backend/app/api/: routes.py
backend/app/graph/: __init__.py  workflow.py
backend/app/llm/: __init__.py  base.py  ollama_client.py  service.py
backend/app/schemas/: __init__.py  agent_state.py  review.py  task.py
backend/app/storage/: __init__.py  sqlite_store.py
backend/app/tools/: __init__.py  docker_runner.py  file_tools.py  git_tools.py  patch_tools.py  static_analysis.py  test_runner.py
backend/tests/: test_agents_phase3.py  test_coder_agent.py  test_docker_runner.py  test_file_tools.py  test_git_tools.py  test_health.py  test_langgraph_workflow.py  test_llm_provider.py  test_patch_tools.py  test_repair_loop.py  test_reviewer_agent.py  test_run_api.py  test_schemas.py  test_static_analysis.py  test_test_runner.py  test_tester_agent.py
docs/: agent-state.md  architecture.md  demo-script.md  resume-bullets.md
docs/example-runs/: add-health-endpoint.json  add-input-validation.json  add-jwt-auth-skeleton.json  fix-failing-test.json  summary.md
examples/fastapi-demo-app/: README.md  evaluation_tasks.json
prompts/: architect.md  coder.md  planner.md  reviewer.md  tester.md
scripts/: evaluate_demo_tasks.py
ui/: streamlit_app.py
(+3 files in other folders)
