[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devteam-ai-backend"
version = "0.1.0"
description = "Backend service for the DevTeam AI multi-agent software development system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1.0",
  "httpx>=0.27,<1.0",
  "langgraph>=1.0,<2.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
]

[project.optional-dependencies]
dev = [
  "bandit>=1.7,<2.0",
  "pytest>=8.2,<9.0",
  "ruff>=0.5,<1.0",
  "mypy>=1.10,<2.0",
]
ui = [
  "streamlit>=1.35,<2.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  ".git",
  "__pycache__",
  ".venv",
  "dist",
  "build",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
mypy_path = "."
exclude = "^examples/"
